--- a/Ionic/conFusion/www/templates/contactus.html
+++ b/Ionic/conFusion/www/templates/contactus.html
@@ -1,5 +1,23 @@
 <ion-view view-title="Contact Us">
   <ion-content>
-    <h1>Contact Us</h1>
+    <div class="card">
+      <div class="item item-divider">
+        Location Information
+      </div>
+      <div class="item item-text-wrap">
+        <h2>Our Address</h2>
+        <p>121, Clear Water Bay Road</p>
+        <p>Clear Water Bay, Kowloon</p>
+        <p>HONG KONG</p>
+        <p><i class="icon ion-android-call"></i> Tel: +852 1234 5678</p>
+        <p><i class="icon ion-printer"></i> Fax: +852 8765 4321</p>
+        <p><i class="icon ion-ios-email"></i> Email:confusion@food.net</p>
+      </div>
+    </div>
+    <div class="button-bar">
+      <a class="button button-full button-positive"><i class="icon ion-ios-telephone-outline larger"></i> Call</a>
+      <a class="button button-full button-calm"><i class="icon ion-social-skype-outline larger"></i> Skype</a>
+      <a class="button button-full button-balanced"><i class="icon ion-ios-email-outline larger"></i> Email</a>
+    </div>
   </ion-content>
 </ion-view>
