--- a/Ionic/conFusion/www/templates/dishdetail.html
+++ b/Ionic/conFusion/www/templates/dishdetail.html
@@ -1,4 +1,9 @@
-<ion-view view-title="Dish Details">
+<ion-view>
+  <ion-nav-title>Dish Details</ion-nav-title>
+  <ion-nav-buttons side="secondary">
+    <button class="button button-icon icon ion-ios-more" ng-click="openPopover($event)">
+    </button>
+  </ion-nav-buttons>
   <ion-content>
     <div class="card">
       <div class="item item-body item-text-wrap">
