--- a/Ionic/conFusion/www/templates/menu.html
+++ b/Ionic/conFusion/www/templates/menu.html
@@ -8,6 +8,8 @@
       <a ng-click="select(3)">Mains</a></li>
     <li ng-class="{active:isSelected(4)}" class="tab-item">
       <a ng-click="select(4)">Desserts</a></li>
+    <li class="tab-item">
+      <a href="#/app/favorites">Favs</a></li>
   </ul>
 </div>
 <ion-content>
